--- a/my-website/package.json
+++ b/my-website/package.json
@@ -11,7 +11,8 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "lint:spelling": "cspell \"**\" --no-progress"
   },
   "dependencies": {
     "@docusaurus/core": "2.2.0",
@@ -23,7 +24,8 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.2.0"
+    "@docusaurus/module-type-aliases": "2.2.0",
+    "cspell": "^6.18.1"
   },
   "browserslist": {
     "production": [
@@ -38,6 +40,6 @@
     ]
   },
   "engines": {
-    "node": ">=16.14"
+    "node": ">=17"
   }
 }
